# cookiecutter-dai

./: .travis.yml  CONTRIBUTING.rst  Makefile  README.rst  appveyor.yml  cookiecutter.json  pyproject.toml  tox.ini
tests/: test_bake_project.py
{{cookiecutter.repository_name}}/: .travis.yml  AUTHORS.rst  Makefile  README.md  pyproject.toml  tasks.py  tox.ini
{{cookiecutter.repository_name}}/.github/workflows/: deploy.yml  docs.yml  tests.yml
{{cookiecutter.repository_name}}/docs/: conf.py  index.rst
{{cookiecutter.repository_name}}/tests/: test_{{cookiecutter.project_slug}}.py
