[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cookiecutter-pypackage"
version = "0.1.1"
description = "Cookiecutter template for a Python package"
authors = [
    { name = "Audrey Roy Greenfeld", email = "aroy@alum.mit.edu" }
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10,<3.15"
keywords = ["cookiecutter", "template", "package"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development"
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "tox>=4.0.0",
    "cookiecutter>=2.0.0",
    "pytest-cookies>=0.6.0",
    "watchdog>=2.0.0",
    "alabaster>=0.7.10",
]

[project.urls]
Homepage = "https://github.com/DAI-Lab/cookiecutter-pypackage"

[tool.setuptools]
packages = ["cookiecutter-pypackage"]

[tool.setuptools.dynamic]
version = { attr = "cookiecutter-pypackage.__version__" }

